race6 id looks decent as well (might need filtering for large thrusts)

--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -11,16 +11,16 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression, HuberRegressor\n",
-    "import scipy\n",
     "model_name = \"x500\"\n",
+    "# model_name = \"race6\"\n",
     "if model_name == 'x500':\n",
     "    from geometry import x500 as model\n",
-    "else:\n",
+    "elif model_name == \"race6\":\n",
     "    from geometry import race6 as model\n",
+    "else:\n",
+    "    raise ValueError(\"Unknown model name\")\n",
     "from process import throttle_thrust, find_tau, fit_tau, plot_thrust_curve, torque_angular_acceleration, fit_inertia, plot_torque_angular_acceleration_curve\n",
-    "import numpy as np\n",
-    "import ipywidgets as widgets\n",
-    "%matplotlib widget"
+    "import numpy as np"
    ]
   },
   {
@@ -58,7 +58,8 @@
     "else:\n",
     "    ulog_files = [\n",
     "        \"logs/2023-12-13-nishanth-sysid/log_45_2023-12-13-21-07-46-up-and-down.ulg\",\n",
-    "        \"logs/2023-12-14-yang-crash/log_60_2023-12-14-20-26-16.ulg\"\n",
+    "        \"logs/2023-12-14-yang-crash/log_60_2023-12-14-20-26-16.ulg\",\n",
+    "        \"logs/2023-12-13-nishanth-sysid/log_46_2023-12-13-21-08-08-left-and-right.ulg\"\n",
     "    ]\n",
     "dfs = [load_ulg(file) for file in ulog_files]"
    ]
@@ -114,11 +115,14 @@
     "        (30, 50),\n",
     "        (10, 40),\n",
     "    ]\n",
-    "else:\n",
+    "elif model_name == \"race6\":\n",
     "    timeframes = [\n",
     "        (4, 10),\n",
     "        (7, 11),\n",
+    "        (2.5, 12.5),\n",
     "    ]\n",
+    "else:\n",
+    "    raise ValueError(\"Unknown model name\")\n",
     "dfs = [timeframe(df, time_start, time_end) for df, (time_start, time_end) in zip(dfs, timeframes)]"
    ]
   },
@@ -244,7 +248,10 @@
    "outputs": [],
    "source": [
     "# angular_acceleration_files = list(range(len(ulog_files)))\n",
-    "inertia_estimation_files = [1] \n",
+    "if model_name == \"x500\":\n",
+    "    inertia_estimation_files = [1] \n",
+    "elif model_name == \"race6\":\n",
+    "    inertia_estimation_files = [2]\n",
     "I_x, I_y = fit_inertia(dfs, model, output_topic, tau, slope, intercept)\n",
     "plot_torque_angular_acceleration_curve([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)"
    ]
@@ -324,7 +331,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_inertia_estimation_files = [1]\n",
+    "if model_name == \"x500\":\n",
+    "    z_inertia_estimation_files = [1]\n",
+    "elif model_name == \"race6\":\n",
+    "    z_inertia_estimation_files = [2]\n",
+    "else: \n",
+    "    raise ValueError(\"Unknown model name\")\n",
     "dfs_tac = [torque_angular_acceleration(df, model, output_topic, tau, slope, intercept) for df in [dfs[i] for i in z_inertia_estimation_files]]"
    ]
   },
@@ -356,7 +368,7 @@
    "outputs": [],
    "source": [
     "thrust_angular_acceleration_z = df[\"torque_z\"] / I_z\n",
-    "residual_angular_acceleration_z = (-df[\"dw_z\"]) - thrust_angular_acceleration # convert dw_z from FRD to FLU\n",
+    "residual_angular_acceleration_z = (-df[\"dw_z\"]) - thrust_angular_acceleration_z # convert dw_z from FRD to FLU\n",
     "residual_torque_z = residual_angular_acceleration_z * I_z"
    ]
   },
@@ -368,15 +380,24 @@
    "source": [
     "drag_input_z = sum([df[f\"torque_drag_input[{motor_i}]_z\"] for motor_i in range(4)])\n",
     "\n",
-    "model = LinearRegression()\n",
+    "kd_model = LinearRegression()\n",
     "print(f\"Correlation {drag_input_z.corr(residual_torque_z)}\")\n",
-    "model.fit(drag_input_z.values.reshape(-1, 1), residual_torque_z.values)\n",
-    "Kd, Kd_intercept = (model.coef_[0], model.intercept_)\n",
-    "\n",
+    "kd_model.fit(drag_input_z.values.reshape(-1, 1), residual_torque_z.values)\n",
+    "Kd, Kd_intercept = (kd_model.coef_[0], kd_model.intercept_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "%matplotlib widget\n",
     "x = np.linspace(drag_input_z.min(), drag_input_z.max(), 100)\n",
     "y = x * Kd + Kd_intercept\n",
     "fig, ax = plt.subplots()\n",
-    "plt.scatter(drag_input, residual_torque_z)\n",
+    "plt.scatter(drag_input_z, residual_torque_z)\n",
     "line, = plt.plot(x, y, color=\"red\", label=f\"Kd = {Kd:.3f}\")\n",
     "plt.ylabel(\"Residual Torque [Nm]\")\n",
     "plt.xlabel(\"Drag Input [N]\")\n",
