--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -11,14 +11,18 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression, HuberRegressor\n",
-    "model_name = \"x500\"\n",
+    "# model_name = \"x500\"\n",
     "# model_name = \"race6\"\n",
+    "model_name = \"fs\"\n",
     "if model_name == 'x500':\n",
     "    from geometry import x500 as model\n",
     "elif model_name == \"race6\":\n",
     "    from geometry import race6 as model\n",
+    "elif model_name == \"fs\":\n",
+    "    from geometry import fs as model\n",
     "else:\n",
     "    raise ValueError(\"Unknown model name\")\n",
+    "\n",
     "from process import throttle_thrust, find_tau, fit_tau, plot_thrust_curve, torque_angular_acceleration, fit_inertia, plot_torque_angular_acceleration_curve\n",
     "import numpy as np"
    ]
@@ -29,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if model_name == \"x500\":\n",
+    "if model_name in [\"x500\", \"fs\"]:\n",
     "    output_topic = \"actuator_motors_mux\" # use \"actuator_controls\" for the unmodified PX4\n",
     "else:\n",
     "    output_topic = \"actuator_motors\" # use \"actuator_controls\" for the unmodified PX4"
@@ -55,11 +59,18 @@
     "        \"logs/2023-12-27-x500/log_36_2023-12-27-14-21-32.ulg\",\n",
     "        \"logs/2023-12-27-x500/log_37_2023-12-27-14-24-24.ulg\"\n",
     "    ]\n",
-    "else:\n",
+    "elif model_name == \"race6\":\n",
     "    ulog_files = [\n",
     "        \"logs/2023-12-13-nishanth-sysid/log_45_2023-12-13-21-07-46-up-and-down.ulg\",\n",
     "        \"logs/2023-12-14-yang-crash/log_60_2023-12-14-20-26-16.ulg\",\n",
     "        \"logs/2023-12-13-nishanth-sysid/log_46_2023-12-13-21-08-08-left-and-right.ulg\"\n",
+    "    ]\n",
+    "elif model_name == \"fs\":\n",
+    "    ulog_files = [\n",
+    "        \"logs/2024-01-08-pavel-fs/log_63_2024-1-8-16-37-54.ulg\",\n",
+    "        \"logs/2024-01-08-pavel-fs/log_64_2024-1-8-16-39-44.ulg\",\n",
+    "        \"logs/2024-01-08-pavel-fs/log_65_2024-1-8-16-40-52.ulg\",\n",
+    "        \"logs/2024-01-08-pavel-fs/log_66_2024-1-8-16-42-48.ulg\"\n",
     "    ]\n",
     "dfs = [load_ulg(file) for file in ulog_files]"
    ]
@@ -121,6 +132,13 @@
     "        (7, 11),\n",
     "        (2.5, 12.5),\n",
     "    ]\n",
+    "elif model_name == \"fs\":\n",
+    "    timeframes = [\n",
+    "        (10, 45),\n",
+    "        (10, 45),\n",
+    "        (10, 45),\n",
+    "        (10, 75),\n",
+    "    ]\n",
     "else:\n",
     "    raise ValueError(\"Unknown model name\")\n",
     "dfs = [timeframe(df, time_start, time_end) for df, (time_start, time_end) in zip(dfs, timeframes)]"
@@ -153,7 +171,8 @@
    "outputs": [],
    "source": [
     "# throttle_estimation_files = list(range(len(ulog_files)))\n",
-    "throttle_estimation_files = [0]\n",
+    "if model_name in [\"x500\", \"fs\", \"race6\"]:\n",
+    "    throttle_estimation_files = [0]\n",
     "tau_correlations = find_tau([dfs[i] for i in throttle_estimation_files], model, output_topic)\n",
     "tau_argmax = tau_correlations[:, 1].argmax()\n",
     "tau = tau_correlations[tau_argmax, 0]\n",
@@ -252,6 +271,8 @@
     "    inertia_estimation_files = [1] \n",
     "elif model_name == \"race6\":\n",
     "    inertia_estimation_files = [2]\n",
+    "elif model_name == \"fs\":\n",
+    "    inertia_estimation_files = [0, 1, 2, 3]\n",
     "I_x, I_y = fit_inertia(dfs, model, output_topic, tau, slope, intercept)\n",
     "plot_torque_angular_acceleration_curve([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)"
    ]
@@ -335,6 +356,8 @@
     "    z_inertia_estimation_files = [1]\n",
     "elif model_name == \"race6\":\n",
     "    z_inertia_estimation_files = [2]\n",
+    "elif model_name == \"fs\":\n",
+    "    z_inertia_estimation_files = [3]\n",
     "else: \n",
     "    raise ValueError(\"Unknown model name\")\n",
     "dfs_tac = [torque_angular_acceleration(df, model, output_topic, tau, slope, intercept) for df in [dfs[i] for i in z_inertia_estimation_files]]"
@@ -433,6 +456,7 @@
    "outputs": [],
    "source": [
     "print(f\"Kf[0]: {intercept/4:.5f}\")\n",
+    "print(f\"Kf[1]: {0:.5f}\")\n",
     "print(f\"Kf[2]: {slope:.5f}\")\n",
     "print(f\"Kd: {Kd:.5f}\")\n",
     "print(f\"Ixx: {I_x:.5f}\")\n",
