fs analysis looks good

--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -272,7 +272,7 @@
     "elif model_name == \"race6\":\n",
     "    inertia_estimation_files = [2]\n",
     "elif model_name == \"fs\":\n",
-    "    inertia_estimation_files = [0, 1, 2, 3]\n",
+    "    inertia_estimation_files = [1, 2]\n",
     "I_x, I_y = fit_inertia(dfs, model, output_topic, tau, slope, intercept)\n",
     "plot_torque_angular_acceleration_curve([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)"
    ]
@@ -420,7 +420,7 @@
     "x = np.linspace(drag_input_z.min(), drag_input_z.max(), 100)\n",
     "y = x * Kd + Kd_intercept\n",
     "fig, ax = plt.subplots()\n",
-    "plt.scatter(drag_input_z, residual_torque_z)\n",
+    "plt.scatter(drag_input_z, residual_torque_z, s=0.1)\n",
     "line, = plt.plot(x, y, color=\"red\", label=f\"Kd = {Kd:.3f}\")\n",
     "plt.ylabel(\"Residual Torque [Nm]\")\n",
     "plt.xlabel(\"Drag Input [N]\")\n",
@@ -455,6 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(f\"tau: {tau:.5f}\")\n",
     "print(f\"Kf[0]: {intercept/4:.5f}\")\n",
     "print(f\"Kf[1]: {0:.5f}\")\n",
     "print(f\"Kf[2]: {slope:.5f}\")\n",
