better axis labels, better fs geom

--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -110,6 +110,8 @@
     "    plt.title(f\"file {i}: {file}\")\n",
     "    for i in range(4):\n",
     "        plt.plot(df[f\"{output_topic}_control[{i}]\"].dropna(), label=f\"motor {i}\")\n",
+    "    plt.xlabel(\"Time [s]\")\n",
+    "    plt.ylabel(\"Throttle [0-1]\")\n",
     "    plt.legend()"
    ]
   },
@@ -215,6 +217,7 @@
     "counts, bin_edges, patches = plt.hist(hovering_throttles, bins=100)\n",
     "plt.vlines(hovering_throttle, 0, max(counts), color=\"red\", label=f\"Median ({hovering_throttle:.3f})\")\n",
     "plt.xlabel(\"Hovering Throttle [0-1]\")\n",
+    "plt.ylabel(\"Count\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "print(f\"Hovering throttle: {hovering_throttle} (per motor)\")"
@@ -247,17 +250,21 @@
     "    plt.title(f\"File {i}: {file}\")\n",
     "    plt.plot(df_tt_tac[\"vehicle_angular_velocity_xyz_derivative[0]\"].dropna(), label=\"vehicle_angular_velocity_xyz_derivative[0]\")\n",
     "    plt.plot(df_tt_tac[\"dw_x\"].dropna(), label=\"dw_x\")\n",
+    "    plt.xlabel(\"Time [s]\")\n",
+    "    plt.ylabel(\"Angular Acceleration [rad/s^2]\")\n",
     "    plt.show()\n",
     "\n",
     "    plt.figure()\n",
     "    plt.title(f\"File {i}: {file}\")\n",
     "    plt.plot(df_tt_tac[\"dw_x\"].dropna(), label=\"dw_x\")\n",
     "    plt.legend()\n",
+    "    plt.xlabel(\"Time [s]\")\n",
+    "    plt.ylabel(\"Angular Acceleration [rad/s^2]\")\n",
     "    plt.twinx()\n",
     "    plt.plot(df_tt_tac[\"torque_x\"].dropna(), label=\"torque_x\", color=\"red\", linestyle=\"--\")\n",
+    "    plt.ylabel(\"Torque [Nm]\")\n",
     "    plt.legend()\n",
-    "    plt.show()\n",
-    "    plt.figure()"
+    "    plt.show()"
    ]
   },
   {
@@ -310,16 +317,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure()\n",
     "counts, bin_edges, patches = plt.hist(df_inertias[\"i_zz_ratio_mean\"], bins=10)\n",
     "plt.title(\"Roll/Pitch (mean) -> Yaw Inertia Ratio Distribution\")\n",
     "plt.vlines(df_inertias[\"i_zz_ratio_mean\"].median(), 0, max(counts), color=\"red\", label=f\"Median ({df_inertias['i_zz_ratio_mean'].median():.3f})\")\n",
     "plt.vlines(df_inertias[\"i_zz_ratio_mean\"].mean(), 0, max(counts), color=\"black\", label=f\"Mean ({df_inertias['i_zz_ratio_mean'].mean():.3f})\")\n",
     "plt.legend()\n",
+    "plt.xlabel(\"Inertia Ratio (Roll/Pitch -> Yaw)\")\n",
+    "plt.ylabel(\"Count\")\n",
     "plt.show()\n",
+    "plt.figure()\n",
     "plt.title(\"Roll/Pitch (max) -> Yaw Inertia Ratio Distribution\")\n",
-    "plt.hist(df_inertias[\"i_zz_ratio_max\"], bins=10)\n",
+    "counts, bin_edges, patches = plt.hist(df_inertias[\"i_zz_ratio_max\"], bins=10)\n",
     "plt.vlines(df_inertias[\"i_zz_ratio_max\"].median(), 0, max(counts), color=\"red\", label=f\"Median ({df_inertias['i_zz_ratio_max'].median():.3f})\")\n",
     "plt.vlines(df_inertias[\"i_zz_ratio_max\"].mean(), 0, max(counts), color=\"black\", label=f\"Mean ({df_inertias['i_zz_ratio_max'].mean():.3f})\")\n",
+    "plt.xlabel(\"Inertia Ratio (Roll/Pitch -> Yaw)\")\n",
+    "plt.ylabel(\"Count\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
