--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -280,7 +280,7 @@
     "    inertia_estimation_files = [2]\n",
     "elif model_name == \"fs\":\n",
     "    inertia_estimation_files = [1, 2]\n",
-    "I_x, I_y = fit_inertia(dfs, model, output_topic, tau, slope, intercept)\n",
+    "I_x, I_y = fit_inertia([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)\n",
     "plot_torque_angular_acceleration_curve([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)"
    ]
   },
@@ -468,6 +468,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(f\"rotor_positions: \\n{model.rotor_positions}\")\n",
+    "print(f\"rotor_thrust_directions: \\n{model.rotor_thrust_directions}\")\n",
+    "print(f\"rotor_torque_directions: \\n{model.rotor_torque_directions}\")\n",
+    "print(f\"mass: {model.mass:.5f}\")\n",
     "print(f\"tau: {tau:.5f}\")\n",
     "print(f\"Kf[0]: {intercept/4:.5f}\")\n",
     "print(f\"Kf[1]: {0:.5f}\")\n",
@@ -475,7 +479,8 @@
     "print(f\"Kd: {Kd:.5f}\")\n",
     "print(f\"Ixx: {I_x:.5f}\")\n",
     "print(f\"Iyy: {I_y:.5f}\")\n",
-    "print(f\"Izz: {I_z:.5f}\")"
+    "print(f\"Izz: {I_z:.5f}\")\n",
+    "print(f\"hovering_throttle: {hovering_throttle:.5f}\")"
    ]
   }
  ],
