--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -70,8 +70,11 @@
     "        \"logs/2024-01-08-pavel-fs/log_63_2024-1-8-16-37-54.ulg\",\n",
     "        \"logs/2024-01-08-pavel-fs/log_64_2024-1-8-16-39-44.ulg\",\n",
     "        \"logs/2024-01-08-pavel-fs/log_65_2024-1-8-16-40-52.ulg\",\n",
-    "        \"logs/2024-01-08-pavel-fs/log_66_2024-1-8-16-42-48.ulg\"\n",
+    "        \"logs/2024-01-08-pavel-fs/log_66_2024-1-8-16-42-48.ulg\",\n",
+    "        \"logs/2024-01-12-pavel policy test/log_76_2024-1-12-17-25-30.ulg\",\n",
+    "        \"logs/2024-01-12-pavel policy test/log_77_2024-1-12-17-27-50.ulg\"\n",
     "    ]\n",
+    "\n",
     "dfs = [load_ulg(file) for file in ulog_files]"
    ]
   },
@@ -88,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grep = \"actuator_motors\"\n",
+    "grep = \"actuator_motors_mux\"\n",
     "[col for col in dfs[0].columns if grep in col]"
    ]
   },
@@ -109,10 +112,14 @@
     "    plt.figure()\n",
     "    plt.title(f\"file {i}: {file}\")\n",
     "    for i in range(4):\n",
-    "        plt.plot(df[f\"{output_topic}_control[{i}]\"].dropna(), label=f\"motor {i}\")\n",
+    "        s = df[f\"{output_topic}_control[{i}]\"].dropna()\n",
+    "        plt.plot(s.index, s, label=f\"motor {i}\")\n",
     "    plt.xlabel(\"Time [s]\")\n",
     "    plt.ylabel(\"Throttle [0-1]\")\n",
-    "    plt.legend()"
+    "    plt.legend()\n",
+    "    if \"rl_tools_multiplexer_status_active\" in df.columns:\n",
+    "        s = df[\"rl_tools_multiplexer_status_active\"].dropna()\n",
+    "        plt.plot(s.index, s, label=\"active\")"
    ]
   },
   {
@@ -140,6 +147,8 @@
     "        (10, 45),\n",
     "        (10, 45),\n",
     "        (10, 75),\n",
+    "        (20, 90),\n",
+    "        (20, 100),\n",
     "    ]\n",
     "else:\n",
     "    raise ValueError(\"Unknown model name\")\n",
@@ -173,8 +182,10 @@
    "outputs": [],
    "source": [
     "# throttle_estimation_files = list(range(len(ulog_files)))\n",
-    "if model_name in [\"x500\", \"fs\", \"race6\"]:\n",
+    "if model_name in [\"x500\", \"race6\"]:\n",
     "    throttle_estimation_files = [0]\n",
+    "elif model_name == \"fs\":\n",
+    "    throttle_estimation_files = [0, 4, 5]\n",
     "tau_correlations = find_tau([dfs[i] for i in throttle_estimation_files], model, output_topic)\n",
     "tau_argmax = tau_correlations[:, 1].argmax()\n",
     "tau = tau_correlations[tau_argmax, 0]\n",
