adding vizualization of the trajectory tracking

--- a/sysid/analyze.ipynb
+++ b/sysid/analyze.ipynb
@@ -108,18 +108,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, (file, df) in enumerate(zip(ulog_files, dfs)):\n",
+    "plot_activation = False\n",
+    "for i_file, (file, df) in enumerate(zip(ulog_files, dfs)):\n",
+    "    print(f\"File {i_file}: {file}\")\n",
     "    plt.figure()\n",
-    "    plt.title(f\"file {i}: {file}\")\n",
-    "    for i in range(4):\n",
-    "        s = df[f\"{output_topic}_control[{i}]\"].dropna()\n",
-    "        plt.plot(s.index, s, label=f\"motor {i}\")\n",
+    "    # plt.title(f\"file {i_file}: {file}\")\n",
+    "    for i_motor in range(4):\n",
+    "        s = df[f\"{output_topic}_control[{i_motor}]\"].dropna()\n",
+    "        plt.plot(s.index, s, label=f\"motor {i_motor}\")\n",
     "    plt.xlabel(\"Time [s]\")\n",
     "    plt.ylabel(\"Throttle [0-1]\")\n",
     "    plt.legend()\n",
-    "    if \"rl_tools_multiplexer_status_active\" in df.columns:\n",
+    "    plt.savefig(f\"figures/throttle_file_{i_file}_{model_name}.pdf\")\n",
+    "    if \"rl_tools_multiplexer_status_active\" in df.columns and plot_activation:\n",
     "        s = df[\"rl_tools_multiplexer_status_active\"].dropna()\n",
-    "        plt.plot(s.index, s, label=\"active\")"
+    "        plt.plot(s.index, s, label=\"active\")\n",
+    "    plt.show()"
    ]
   },
   {
@@ -194,6 +198,7 @@
     "plt.xlabel(\"Tau [s]\")\n",
     "plt.ylabel(\"Correlation (throttle, thrust)\")\n",
     "plt.legend()\n",
+    "plt.savefig(f\"figures/tau_correlation_{model_name}.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -231,6 +236,7 @@
     "plt.ylabel(\"Count\")\n",
     "plt.legend()\n",
     "plt.show()\n",
+    "plt.savefig(f\"figures/hovering_throttle_{model_name}.pdf\")\n",
     "print(f\"Hovering throttle: {hovering_throttle} (per motor)\")"
    ]
   },
@@ -242,7 +248,7 @@
    "source": [
     "\n",
     "correlation, (slope, intercept) = fit_tau(dfs_tt, tau, model, output_topic)\n",
-    "plot_thrust_curve(df_tt, model, output_topic, tau, slope, intercept, hovering_throttle)"
+    "plot_thrust_curve(df_tt, model, output_topic, tau, slope, intercept, hovering_throttle, filename=f\"figures/thrust_curve_{model_name}.pdf\")"
    ]
   },
   {
@@ -292,7 +298,7 @@
     "elif model_name == \"fs\":\n",
     "    inertia_estimation_files = [1, 2]\n",
     "I_x, I_y = fit_inertia([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)\n",
-    "plot_torque_angular_acceleration_curve([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept)"
+    "plot_torque_angular_acceleration_curve([dfs[i] for i in inertia_estimation_files], model, output_topic, tau, slope, intercept, filename=f\"figures/angular_acceleration_curve_{model_name}\")"
    ]
   },
   {
@@ -440,7 +446,7 @@
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "%matplotlib widget\n",
+    "# %matplotlib widget\n",
     "x = np.linspace(drag_input_z.min(), drag_input_z.max(), 100)\n",
     "y = x * Kd + Kd_intercept\n",
     "fig, ax = plt.subplots()\n",
