--- a/sysid/analyze_policy.ipynb
+++ b/sysid/analyze_policy.ipynb
@@ -7,9 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "from load_ulg import load_ulg, timeframe\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n",
+    "import matplotlib.cm as cm\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "import numpy as np"
@@ -57,7 +60,21 @@
     "    # \"logs/2024-01-16-pavel-succesful-flight/log_87_2024-1-16-14-49-56.ulg\",\n",
     "    # \"logs/2024-01-17-pre-test/log_90_2024-1-15-13-04-20.ulg\"\n",
     "    # \"logs/2024-01-17-pavel/log_93_2024-1-17-15-11-38.ulg\"\n",
-    "    \"logs/2024-01-17-pavel/log_94_2024-1-17-15-14-04.ulg\" # trajectory tracking 1x\n",
+    "    # \"logs/2024-01-17-pavel/log_94_2024-1-17-15-14-04.ulg\" # trajectory tracking 1x\n",
+    "    # \"logs/2024-01-18-tiziano/log_96_2024-1-18-12-18-42.ulg\" # island tiziano hovering \n",
+    "    # \"logs/2024-01-18-tiziano/log_97_2024-1-18-12-24-16.ulg\" # island tiziano trajectory tracking\n",
+    "    # \"logs/2024-01-18-tiziano2/log_98_2024-1-18-14-38-14.ulg\" # almost crash, bad setting\n",
+    "    # island tiziano 1\n",
+    "    # \"logs/2024-01-18-tiziano/log_96_2024-1-18-12-18-42.ulg\" # hovering\n",
+    "    # \"logs/2024-01-18-tiziano/log_97_2024-1-18-12-24-16.ulg\"\n",
+    "    # island tiziano 2\n",
+    "    # \"logs/2024-01-18-tiziano2/log_99_2024-1-18-14-40-42.ulg\" # scale 8, interval: 15\n",
+    "    # \"logs/2024-01-18-tiziano2/log_101_2024-1-18-14-43-34.ulg\" # scale: 8, interval: 10\n",
+    "    # \"logs/2024-01-18-tiziano2/log_102_2024-1-18-14-47-34.ulg\" # scale: 24, interval: 60s\n",
+    "    # \"logs/2024-01-18-tiziano2/log_103_2024-1-18-14-51-28.ulg\" # scale: 24, interval: 40s\n",
+    "    # island pavel 1\n",
+    "    \"logs/2024-01-18-pavel/log_105_2024-1-18-15-46-50.ulg\"\n",
+    "\n",
     "]\n",
     "dfs = [load_ulg(file) for file in ulog_files]"
    ]
@@ -146,9 +163,19 @@
     "    # (56.5, 57.5)\n",
     "    # (71, 72),\n",
     "    # (86, 87),\n",
-    "    (31, 65),\n",
+    "    # (31, 65),\n",
     "    # (64.5, 65.5),\n",
     "    # (45, 80),\n",
+    "    # (100, 160),\n",
+    "    # (55, 105),\n",
+    "    # (55, 105),\n",
+    "    # (40, 120),\n",
+    "    # (30, 80),\n",
+    "    # (20, 85),\n",
+    "    # (40, 60),\n",
+    "    # (100, 140),\n",
+    "    # (100, 160),\n",
+    "    (35, 105),\n",
     "]\n",
     "dfs_tf = [timeframe(df, time_start, time_end) for df, (time_start, time_end) in zip(dfs, timeframes)]"
    ]
@@ -160,7 +187,7 @@
    "outputs": [],
    "source": [
     "df = dfs_tf[0]\n",
-    "fig, axs = plt.subplots(9, 1, figsize=(10, 20), sharex=True)\n",
+    "fig, axs = plt.subplots(7, 1, figsize=(10, 20), sharex=True)\n",
     "fig.suptitle(f\"Policy Analysis {ulog_files[0]}\")\n",
     "curr = 0\n",
     "sa = df[\"rl_tools_multiplexer_status_active\"].dropna()\n",
@@ -285,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[m.message for m in ulog.logged_messages]"
+    "[(m.message, m.timestamp/1e6) for m in ulog.logged_messages]"
    ]
   },
   {
@@ -301,19 +328,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_tt = dfs[0]\n",
+    "df_tt = dfs_tf[0]\n",
+    "df_tt_file = ulog_files[0]\n",
     "start_time = df_tt[\"rl_tools_command_active\"].idxmax()\n",
     "end_time = (df_tt[df_tt.index > start_time][\"rl_tools_command_active\"] == False).idxmax()\n",
     "print(f\"start_time: {start_time} end_time: {end_time}\")\n",
     "\n",
     "df_tt_tf = df_tt[(df_tt.index > start_time) & (df_tt.index < end_time)]\n",
     "\n",
-    "trajectory_tracking_df = df_tt_tf[[*[f\"rl_tools_command_target_position[{i}]\" for i in range(3)], *[f\"vehicle_local_position_{axis}\" for axis in \"xyz\"]]].dropna(how=\"all\")\n",
+    "trajectory_tracking_df = df_tt_tf[[*[f\"rl_tools_command_target_position[{i}]\" for i in range(3)], *[f\"vehicle_local_position_{axis}\" for axis in \"xyz\"], *[f\"vehicle_local_position_v{axis}\" for axis in \"xyz\"]]].dropna(how=\"all\")\n",
     "\n",
     "target_position_df = trajectory_tracking_df[[\"rl_tools_command_target_position[0]\", \"rl_tools_command_target_position[1]\"]].dropna()\n",
-    "plt.plot(target_position_df[\"rl_tools_command_target_position[0]\"], -target_position_df[\"rl_tools_command_target_position[1]\"])\n",
-    "local_position_df = trajectory_tracking_df[[\"vehicle_local_position_x\", \"vehicle_local_position_y\"]].dropna()\n",
-    "plt.plot(local_position_df[\"vehicle_local_position_x\"], -local_position_df[\"vehicle_local_position_y\"])"
+    "plt.figure()\n",
+    "plt.plot(target_position_df[\"rl_tools_command_target_position[0]\"], -target_position_df[\"rl_tools_command_target_position[1]\"], label=\"target\")\n",
+    "local_position_df = trajectory_tracking_df[[\"vehicle_local_position_x\", \"vehicle_local_position_y\", \"vehicle_local_position_vx\", \"vehicle_local_position_vy\", \"vehicle_local_position_vz\"]].dropna()\n",
+    "speed = np.sqrt(local_position_df[\"vehicle_local_position_vx\"]**2 + local_position_df[\"vehicle_local_position_vy\"]**2 + local_position_df[\"vehicle_local_position_vz\"]**2)\n",
+    "plt.plot(local_position_df[\"vehicle_local_position_x\"], -local_position_df[\"vehicle_local_position_y\"], label=\"actual\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"x [m]\")\n",
+    "plt.ylabel(\"y [m]\")\n",
+    "plt.savefig(\"figures/trajectory_tracking.pdf\")\n",
+    "plt.show()\n",
+    "\n",
+    "os.makedirs(\"figure_data\", exist_ok=True)\n",
+    "trajectory_tracking_df.to_csv(f\"figure_data/{df_tt_file.split('/')[-1]}_trajectory_tracking.csv\")\n",
+    "\n",
+    "# plt.plot(target_position_df.index, target_position_df[\"rl_tools_command_target_position[1]\"], label=\"target\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajectory_tracking_df"
    ]
   }
  ],
